# GenAI_GroupProject

./: .env.example  .gitignore  PLAN.md  PROJECT_HISTORY.md  README.md  VC Startup Pitch Evaluator · IE University · GenAI Final Project v2.htm  app.py  conftest.py  pyproject.toml  requirements.txt  test_r4.py
.streamlit/: config.toml
agents/: __init__.py  tools.py  validator_agent.py
chains/: memo_writer.py  output_models.py  scorer.py
graph/: __init__.py  graph.py  nodes.py  state.py
rag/: ROLE2_RAG_GUIDE.md  __init__.py  extractor_chain.py  ingest.py  rag_demo.py  retriever.py
tests/: test_chains.py  test_rag_pipeline.py  test_validator_agent.py
views/: evaluator.py  how_it_works.py
